--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
         "utility": "cpp",
         "queue": "cpp",
         "deque": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
